tenants/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: staging
  labels:
    tenant: staging
    environment: staging
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
